--- a/css/styles.css
+++ b/css/styles.css
@@ -6,9 +6,14 @@ p{
     color: grey;
 }
 
-h1 , h2 , h3, h4, h5, h6{
+h1 , h2 , h3, h5, h6{
     color: white;
     margin-left: 3%;
+}
+h4{
+    color: white;
+    margin-top: 3%;
+
 }
 h1:hover{
     color: red;
@@ -77,16 +82,21 @@ iframe{
 
 /* contact section */
 .contact-btn{
-    padding: 5% 45%;
-    
+    text-align: center;
+   margin: 3% auto;
+}
+.contact-info{
+    padding-left: 5%;
+    text-align: left;
+    margin: 3% 0 3% 0;
+
 }
 
-
-.contact{
-    position: relative;
-    width: 50%;
+.contact {
+    padding-left: 5%;
+    /* width: 50%; */
     text-align: left;
-    margin: 3% 25%;
+    margin: 3% auto;
     color: white;
 }
 
@@ -113,6 +123,13 @@ iframe{
     }
 
     .contact{
+        position: relative;
+        width: 50%;
+        text-align: left;
+        margin: 3% 25%;
+        color: white;
+    }
+    .contact-info{
         position: relative;
         width: 50%;
         text-align: left;
