--- a/css/styles.css
+++ b/css/styles.css
@@ -25,10 +25,9 @@ h1:hover{
     text-align: center;
 }
 .Top-img{
-    margin-top: 2%;
-    margin-bottom: 2%;
-    width: 1080px;
-    height: 400px;
+   margin: 3%;
+    /* width: 10%; */
+    
    
 }
 
