--- a/css/styles.css
+++ b/css/styles.css
@@ -6,9 +6,14 @@ p{
     color: grey;
 }
 
-h1 , h2 , h3, h5, h6{
+h1 , h3, h5, h6{
     color: white;
     margin-left: 3%;
+}
+h2{
+    color: white;
+    text-align: left;
+    margin: 3%;
 }
 h4{
     color: white;
