--- a/css/styles.css
+++ b/css/styles.css
@@ -55,11 +55,18 @@ h1:hover{
     float: right;
     margin-left: 30px;
 }
+img{
+    border-radius: 8px;
+}
 .skill-row{
+    padding: 3%;
     width: 85%;
     margin: 3% 15%;
     text-align: center;
     line-height: 2;
+    border: 5px;
+    border-radius: 8px;
+    border-style: solid;
 }
 }
 /* Photos Section */
@@ -68,7 +75,7 @@ h1:hover{
     margin:3%;
 }
 .grid-img{
-  
+    
     text-align: center;
     padding:10px;
     border-radius: 8px;
