--- a/css/styles.css
+++ b/css/styles.css
@@ -72,10 +72,11 @@ img{
 /* Photos Section */
 .photo-grid{
     text-align: center;
+    margin-top: 7%;
     margin:3%;
 }
 .grid-img{
-    
+  
     text-align: center;
     padding:10px;
     border-radius: 8px;
