--- a/css/styles.css
+++ b/css/styles.css
@@ -44,14 +44,14 @@ h1:hover{
 .floatRight{
     text-align: center;
     float: left;
-    margin-right: 30px;
+    /* margin-right: 30px; */
    
    
 }
 .floatLeft{
     text-align: center;
     float: right;
-    margin-left: 30px;
+    /* margin-left: 30px; */
 }
 img{
     border-radius: 8px;
@@ -132,7 +132,12 @@ i:hover{
 
 @media ( max-width: 800px) { 
    
-  
+    .navbar{
+        width: 100%;
+        margin-left: 0px;
+        margin-right: 0px;
+        text-align: right;
+    }
     #navbarNav{
         text-align: left;
     }
@@ -160,5 +165,9 @@ i:hover{
         width: fit-content;
         margin: 3% 0;
         text-align: center;
+    }
+    .skill-row{
+        margin: 3% 15% 0  15%;
+
     }
  }
