--- a/css/styles.css
+++ b/css/styles.css
@@ -139,7 +139,7 @@ i:hover{
         text-align: right;
     }
     #navbarNav{
-        text-align: left;
+        text-align: center;
     }
 
     .contact{
